--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-git_test2 git git_test3
-hello
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>我的第一個網頁</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="title">
+      <h1>Michael blog</h1>
+    </div>
+  </body>
+</html>
